--- a/SwiftCart/BLL/BLL.csproj
+++ b/SwiftCart/BLL/BLL.csproj
@@ -45,11 +45,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="DTOs\CustomerDTO.cs" />
+    <Compile Include="DTOs\SellerDTO.cs" />
     <Compile Include="DTOs\AgentDTO.cs" />
+    <Compile Include="DTOs\ProductDTO.cs" />
+    <Compile Include="DTOs\CategoryDTO.cs" />
     <Compile Include="DTOs\BranchDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AgentService.cs" />
     <Compile Include="Services\BranchService.cs" />
+    <Compile Include="Services\CategoryService.cs" />
+    <Compile Include="Services\CustomerService.cs" />
+    <Compile Include="Services\ProductService.cs" />
+    <Compile Include="Services\SellerService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
