--- a/SwiftCart/SwiftCart/API.csproj
+++ b/SwiftCart/SwiftCart/API.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Controllers\BranchController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
+    <Compile Include="Controllers\FAQController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\SellerController.cs" />
     <Compile Include="DTO\LoginDTO.cs" />
