--- a/SwiftCart/DAL/DAL.csproj
+++ b/SwiftCart/DAL/DAL.csproj
@@ -58,9 +58,11 @@
     <Compile Include="EF\Models\BranchProduct.cs" />
     <Compile Include="EF\Models\Category.cs" />
     <Compile Include="EF\Models\Customer.cs" />
+    <Compile Include="EF\Models\FAQ.cs" />
     <Compile Include="EF\Models\Order.cs" />
     <Compile Include="EF\Models\Product.cs" />
     <Compile Include="EF\Models\ProductOrder.cs" />
+    <Compile Include="EF\Models\Review.cs" />
     <Compile Include="EF\Models\Seller.cs" />
     <Compile Include="EF\Models\Token.cs" />
     <Compile Include="EF\SwiftCartContext.cs" />
@@ -101,6 +103,14 @@
     <Compile Include="Migrations\202405100921274_add_token.designer.cs">
       <DependentUpon>202405100921274_add_token.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202405111355572_FAQdb.cs" />
+    <Compile Include="Migrations\202405111355572_FAQdb.designer.cs">
+      <DependentUpon>202405111355572_FAQdb.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202405111429392_Reviewdb.cs" />
+    <Compile Include="Migrations\202405111429392_Reviewdb.designer.cs">
+      <DependentUpon>202405111429392_Reviewdb.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repos\AdminRepo.cs" />
@@ -108,6 +118,7 @@
     <Compile Include="Repos\BranchRepo.cs" />
     <Compile Include="Repos\CategoryRepo.cs" />
     <Compile Include="Repos\CustomerRepo.cs" />
+    <Compile Include="Repos\FAQRepo.cs" />
     <Compile Include="Repos\OrderRepo.cs" />
     <Compile Include="Repos\ProductRepo.cs" />
     <Compile Include="Repos\Repo.cs" />
@@ -145,6 +156,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202405100921274_add_token.resx">
       <DependentUpon>202405100921274_add_token.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202405111355572_FAQdb.resx">
+      <DependentUpon>202405111355572_FAQdb.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202405111429392_Reviewdb.resx">
+      <DependentUpon>202405111429392_Reviewdb.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
