Customer prduct order and review done

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /SwiftCart/.vs/SwiftCart/config/applicationhost.config
+/SwiftCart/.vs/SwiftCart/config/applicationhost.config
+/SwiftCart/SwiftCart/Web.config
