--- a/SwiftCart/SwiftCart/API.csproj
+++ b/SwiftCart/SwiftCart/API.csproj
@@ -99,7 +99,9 @@
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\FAQController.cs" />
+    <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
+    <Compile Include="Controllers\ReviewController.cs" />
     <Compile Include="Controllers\SellerController.cs" />
     <Compile Include="DTO\LoginDTO.cs" />
     <Compile Include="Global.asax.cs">
