--- a/SwiftCart/BLL/BLL.csproj
+++ b/SwiftCart/BLL/BLL.csproj
@@ -36,6 +36,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,8 +46,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="DTOs\ChangePasswordDTO.cs" />
     <Compile Include="DTOs\CustomerDTO.cs" />
     <Compile Include="DTOs\FaqDTO.cs" />
+    <Compile Include="DTOs\OrderDetatilsDTO.cs" />
+    <Compile Include="DTOs\OrderDTO.cs" />
+    <Compile Include="DTOs\PlaceOrderDTO.cs" />
+    <Compile Include="DTOs\PlaceProductDTO.cs" />
+    <Compile Include="DTOs\ProductOrderDTO.cs" />
     <Compile Include="DTOs\ProfileDTO.cs" />
     <Compile Include="DTOs\ReviewDTO.cs" />
     <Compile Include="DTOs\SellerDTO.cs" />
@@ -55,6 +62,7 @@
     <Compile Include="DTOs\CategoryDTO.cs" />
     <Compile Include="DTOs\BranchDTO.cs" />
     <Compile Include="DTOs\TokenDTO.cs" />
+    <Compile Include="DTOs\updateProfileDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AgentService.cs" />
     <Compile Include="Services\AuthService.cs" />
@@ -62,7 +70,9 @@
     <Compile Include="Services\CategoryService.cs" />
     <Compile Include="Services\CustomerService.cs" />
     <Compile Include="Services\FAQService.cs" />
+    <Compile Include="Services\PlaceOrderService.cs" />
     <Compile Include="Services\ProductService.cs" />
+    <Compile Include="Services\ReviewService.cs" />
     <Compile Include="Services\SellerService.cs" />
   </ItemGroup>
   <ItemGroup>
